@@ -7,7 +7,7 @@ Instructions on how to start examples can be found in [README.txt](README.txt).
 How to start examples in the developer's environment, please see [DEVNOTES.txt](DEVNOTES.txt).
 
 ## Running examples on JDK 9/10/11
-Ignite uses proprietary SDK APIs that are not available by default. See also [How to run Ignite on JDK 9,10 and 11](https://apacheignite.readme.io/docs/getting-started#section-running-ignite-with-java-9-10-11)
+Ignite uses proprietary SDK APIs that are not available by default. See also [How to run Ignite on JDK 9,10 and 11](https://ignite.apache.org/docs/latest/setup#running-ignite-with-java-11-or-later)
 
 To set up local IDE to easier access to examples, it is possible to add following options as default for all applications
 
@@ -16,8 +16,8 @@ To set up local IDE to easier access to examples, it is possible to add followin
    --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED
    --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED
    --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED
-   --illegal-access=permit
-   -Djdk.tls.client.protocols=TLSv1.2``
+   --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED
+   --illegal-access=permit``
 
 For example, for IntelliJ IDEA it is possible to use Application Templates.
 
